--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 
     ext.kotlin_version = "1.3.70"
     ext.safe_args_version = "2.1.0-alpha06"
-    ext.build_gradle_version = "4.1.0-alpha02"
+    ext.build_gradle_version = '4.1.0-alpha03'
 
     repositories {
         google()
