--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,11 @@ dependencies {
     implementation('androidx.preference:preference-ktx:1.1.0')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
 }
