--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
+    //Circle Imageview
+    implementation "de.hdodenhof:circleimageview:3.1.0"
+
 }
