--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
     //Circle Imageview
